@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-3-4-10
+DATE: 07/27/2010
+STAFF: lec
+CHANGES: TR10136
+1) fix weekly/PRB_StrainJAX2.py
+
 TAG: qcreports_db-4-3-4-9
 TAG: qcreports_db-4-3-4-8
 DATE: 07/22/2010
